Remove overflow in  body due to issues with mobile display

--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@
 }
 body {
   background: #222;
-  overflow: hidden;
 }
 .card {
   width: 100%;
